--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ body {
 }
 
 .navbar__img img {
-    width: 100%;
+    width: 120%;
     height: 100%;
 }
 
@@ -1796,7 +1796,7 @@ footer {
 .hero-pages {
     width: 100%;
     height: 41rem;
-    /*background-image: url("/src/images/hero/heroes-bg.png");*/
+    background-image: url("/src/images/hero/heroes-bg.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1809,7 +1809,7 @@ footer {
     position: absolute;
     top: 0;
     right: 0;
-    background-color: rgba(255, 255, 255, 0.92);
+    background-color: rgba(255, 255, 255, 0.80);
 }
 
 .hero-pages__text {
