--- a/src/App.css
+++ b/src/App.css
@@ -2335,3 +2335,44 @@ footer {
     box-shadow: 0 10px 15px 0 rgba(255, 83, 48, 0.6);
     background-color: #fa4226;
 }
+
+.favorites--emp {
+
+}
+
+.favorites--empty {
+
+}
+
+.favorites--empty h2 {
+    font-size: 32px;
+    margin-bottom: 10px;
+}
+
+.favorites--empty p {
+    font-size: 18px;
+    line-height: 145.4%;
+    letter-spacing: 0.01em;
+    color: #777777;
+}
+
+/*icon {*/
+/*    position: relative;*/
+/*    top: 2px;*/
+/*}*/
+
+.favorites--empty img {
+    display: block;
+    width: 300px;
+    margin: 45px auto 60px;
+}
+
+/*.button--black {*/
+/*    padding: 12px 0 14px;*/
+/*    width: 230px;*/
+/*    margin: 0 auto;*/
+/*    font-weight: 600;*/
+/*    font-size: 18px;*/
+/*}*/
+
+
