--- a/src/App.css
+++ b/src/App.css
@@ -2396,12 +2396,10 @@ footer {
     }
 }
 
-/*.button--black {*/
-/*    padding: 12px 0 14px;*/
-/*    width: 230px;*/
-/*    margin: 0 auto;*/
-/*    font-weight: 600;*/
-/*    font-size: 18px;*/
-/*}*/
+.buttonFavorites img {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
 
 
