add icon svg favorites for SelectCar

--- a/src/App.css
+++ b/src/App.css
@@ -2402,4 +2402,12 @@ footer {
     cursor: pointer;
 }
 
+.buttonCarBox {
+    position: absolute;
+    top: 10%;
+    left: 95%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+}
+
 
