fix SelectCar component css class

--- a/src/App.css
+++ b/src/App.css
@@ -944,16 +944,16 @@ li {
     line-height: 1.43;
 }
 
-.pick-section {
+.selectCar__section {
     padding: 10rem 0;
 }
 
-.pick-container {
+.selectCar__container {
     display: flex;
     flex-direction: column;
 }
 
-.pick-container__title {
+.selectCar__title {
     margin: 0 auto;
     text-align: center;
     color: #010103;
@@ -961,45 +961,45 @@ li {
     margin-bottom: 5rem;
 }
 
-.pick-container__title p {
+.selectCar__title p {
     font-size: 1.6rem;
     font-family: "Rubik", sans-serif;
     color: #706f7b;
     line-height: 1.5;
 }
 
-.pick-container__title h3 {
+.selectCar__title h3 {
     font-size: 2.4rem;
     font-family: "Rubik", sans-serif;
     font-weight: 500;
 }
 
-.pick-container__title h2 {
+.selectCar__title h2 {
     font-size: 4.2rem;
     font-family: "Poppins", sans-serif;
     margin: 0.5rem 0 1rem 0;
 }
 
-.pick-container__car-content {
+.selectCar__content {
     display: flex;
     justify-content: space-between;
     gap: 1rem;
 }
 
 @media (max-width: 1050px) {
-    .pick-container__car-content {
+    .selectCar__content {
         flex-direction: column;
         gap: 5rem;
     }
 }
 
-.pick-box {
+.selectCar__box {
     display: flex;
     flex-direction: column;
     gap: 0.7rem;
 }
 
-.pick-box button {
+.selectCar__box button {
     font-size: 2rem;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
@@ -1011,7 +1011,7 @@ li {
     text-align: left;
 }
 
-.pick-box button:hover {
+.selectCar__box button:hover {
     background-color: #ff4d30;
     color: white;
 }
