--- a/src/App.css
+++ b/src/App.css
@@ -1197,7 +1197,7 @@ li {
     font-weight: 500;
 }
 
-.choose-section {
+.takeUs__section {
     padding: 2rem 0 10rem 0;
     /*background-image: url("/src/images/chooseUs/bg.png");*/
     background-position: -225px 255px;
@@ -1206,19 +1206,19 @@ li {
     background-color: #f8f8f8;
 }
 
-.choose-container {
+.takeUs__container {
     display: flex;
     flex-direction: column;
 }
 
-.choose-container__img {
+.takeUs__img {
     width: 70%;
     height: auto;
     margin: 0 auto;
 }
 
 @media (max-width: 550px) {
-    .choose-container__img {
+    .takeUs__img {
         width: 100%;
     }
 }
@@ -1302,35 +1302,35 @@ li {
     max-width: 44rem;
 }
 
-.text-container__right__box {
+.takeUs__box {
     display: flex;
 }
 
 @media (max-width: 550px) {
-    .text-container__right__box {
+    .takeUs__box {
         flex-direction: column;
         align-items: center;
     }
 }
 
-.text-container__right__box img {
+.takeUs__box img {
     width: 11rem;
     height: 11rem;
     margin-right: 1.1rem;
 }
 
-.text-container__right__box__text {
+.takeUs__box__text {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     justify-content: center;
 }
 
-.text-container__right__box__text h4 {
+.takeUs__box__text h4 {
     font-size: 2.4rem;
 }
 
-.text-container__right__box__text p {
+.takeUs__box__text p {
     font-size: 1.6rem;
     color: #706f7b;
     font-family: "Rubik", sans-serif;
