--- a/src/App.css
+++ b/src/App.css
@@ -1785,7 +1785,7 @@ footer {
     background-color: #fa4226;
 }
 
-.hero-pages {
+.hero__pages {
     width: 100%;
     height: 41rem;
     background-image: url("/src/images/hero/heroes-bg.png");
@@ -1795,7 +1795,7 @@ footer {
     position: relative;
 }
 
-.hero-pages__overlay {
+.hero__overlay {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -1804,7 +1804,7 @@ footer {
     background-color: rgba(255, 255, 255, 0.80);
 }
 
-.hero-pages__text {
+.hero__text {
     display: flex;
     flex-direction: column;
     z-index: 3;
@@ -1815,27 +1815,27 @@ footer {
     color: #010103;
 }
 
-.hero-pages__text h3 {
+.hero__text h3 {
     font-size: 3.6rem;
     margin-bottom: 0.5rem;
 }
 
-.hero-pages__text p {
+.hero__text p {
     font-size: 1.6rem;
     font-weight: 600;
 }
 
-.hero-pages__text p a {
+.hero__text p a {
     color: #010103;
     text-decoration: none;
     transition: all 0.2s;
 }
 
-.hero-pages__text p a:hover {
+.hero__text p a:hover {
     color: #ff4d30;
 }
 
-.about-main {
+.about__main {
     margin: 10rem auto;
     display: flex;
     gap: 5rem;
@@ -1844,7 +1844,7 @@ footer {
 }
 
 @media (max-width: 960px) {
-    .about-main {
+    .about__main {
         display: grid;
         grid-template-columns: 1fr;
         text-align: center;
@@ -1853,48 +1853,48 @@ footer {
 }
 
 @media (max-width: 520px) {
-    .about-main {
+    .about__main {
         max-width: 100%;
     }
 }
 
-.about-main__img {
+.about__img {
     width: 47rem;
     height: 50rem;
 }
 
 @media (max-width: 960px) {
-    .about-main__img {
+    .about__img {
         margin: 0 auto;
     }
 }
 
 @media (max-width: 520px) {
-    .about-main__img {
+    .about__img {
         width: 100%;
         height: auto;
     }
 }
 
-.about-main__text {
+.about__text {
     color: #010103;
     display: flex;
     flex-direction: column;
 }
 
-.about-main__text h3 {
+.about__text h3 {
     font-size: 2.2rem;
     font-family: "Rubik", sans-serif;
     font-weight: 500;
     margin-bottom: 1rem;
 }
 
-.about-main__text h2 {
+.about__text h2 {
     font-size: 4.2rem;
     line-height: 1.2;
 }
 
-.about-main__text p {
+.about__text p {
     font-size: 1.6rem;
     color: #706f7b;
     font-family: "Rubik", sans-serif;
@@ -1903,53 +1903,53 @@ footer {
     margin-bottom: 4rem;
 }
 
-.about-main__text__icons {
+.about__icons {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 4rem;
 }
 
 @media (max-width: 520px) {
-    .about-main__text__icons {
+    .about__icons {
         grid-template-columns: 1fr;
         margin: 0 auto;
         gap: 0;
     }
 
-    .about-main__text__icons p {
+    .about__icons p {
         margin-top: 0;
     }
 }
 
-.about-main__text__icons__box {
+.about__icons-box {
     display: flex;
     flex-direction: column;
 }
 
 @media (max-width: 520px) {
-    .about-main__text__icons__box {
+    .about__icons-box {
         align-items: center;
     }
 }
 
-.about-main__text__icons__box img {
+.about__icons-box img {
     width: 7rem;
 }
 
-.about-main__text__icons__box span {
+.about__icons-box span {
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 
 @media (max-width: 520px) {
-    .about-main__text__icons__box span {
+    .about__icons-box span {
         text-align: center;
         flex-direction: column;
     }
 }
 
-.about-main__text__icons__box span h4 {
+.about__icons-box span h4 {
     font-size: 4.6rem;
 }
 
