fix css class code Model

--- a/src/App.css
+++ b/src/App.css
@@ -2051,7 +2051,7 @@ footer {
     }
 }
 
-.models-div__box {
+.models__box {
     border: 1px solid #d5d5d5;
     border-radius: 0.3rem;
     display: flex;
@@ -2060,63 +2060,63 @@ footer {
 }
 
 @media (max-width: 400px) {
-    .models-div__box {
+    .models__box {
         grid-template-columns: 1fr;
         width: 100%;
     }
 }
 
-.models-div__box__img {
+.models__img {
     width: 100%;
     height: auto;
     border-radius: 0.3rem;
 }
 
-.models-div__box__img img {
+.models__img img {
     width: 90%;
     height: 22rem;
 }
 
-.models-div__box__descr {
+.models__description {
     padding: 2rem 3rem;
     display: flex;
     flex-direction: column;
     color: #010103;
 }
 
-.models-div__box__descr__name-price {
+.models__name-price {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.models-div__box__descr__name-price__name {
+.models__name {
     display: flex;
     flex-direction: column;
     text-align: left;
     gap: 0.5rem;
 }
 
-.models-div__box__descr__name-price__name p {
+.models__name p {
     font-size: 2.4rem;
     font-weight: 700;
 }
 
-.models-div__box__descr__name-price__price {
+.models__price {
     display: flex;
     flex-direction: column;
     text-align: right;
 }
 
-.models-div__box__descr__name-price__price h4 {
+.models__price h4 {
     font-size: 2.8rem;
 }
 
-.models-div__box__descr__name-price__price p {
+.models__price p {
     font-size: 1.6rem;
 }
 
-.models-div__box__descr__name-price__details {
+.models__details {
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 2rem;
@@ -2127,14 +2127,14 @@ footer {
     border-bottom: 1px solid #c6c6c6;
 }
 
-.models-div__box__descr__name-price__details span {
+.models__details span {
     font-size: 1.8rem;
     font-weight: 500;
     color: #777777;
     text-align: left;
 }
 
-.models-div__box__descr__name-price__btn {
+.models__btn {
     background-color: #ff4d30;
     padding: 1.8rem 3rem;
     border-radius: 0.3rem;
@@ -2145,12 +2145,12 @@ footer {
     cursor: pointer;
 }
 
-.models-div__box__descr__name-price__btn:hover {
+.models__btn:hover {
     box-shadow: 0 10px 15px 0 rgba(255, 83, 48, 0.6);
     background-color: #fa4226;
 }
 
-.models-div__box__descr__name-price__btn a {
+.models__btn a {
     text-decoration: none;
     color: white;
     font-weight: 700;
