--- a/src/App.css
+++ b/src/App.css
@@ -1936,23 +1936,22 @@ footer {
     font-size: 4.6rem;
 }
 
-.book-banner {
+.book__banner {
     display: flex;
     width: 100%;
     height: 20rem;
-    /*background-image: url("/src/images/banners/book-banner.png");*/
+    background-image: url("/src/images/banners/book-banner.png");
     position: relative;
 }
 
 @media (max-width: 750px) {
-    .book-banner {
-        /*height: -moz-fit-content;*/
+    .book__banner {
         height: fit-content;
         padding: 1rem 0;
     }
 }
 
-.book-banner__overlay {
+.banner__overlay {
     background-color: #2d2d2d;
     opacity: 0.89;
     width: 100%;
@@ -1962,7 +1961,7 @@ footer {
     right: 0;
 }
 
-.text-content {
+.banner__text {
     color: white;
     z-index: 5;
     position: relative;
@@ -1975,7 +1974,7 @@ footer {
 }
 
 @media (max-width: 750px) {
-    .text-content {
+    .banner__text {
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -1984,7 +1983,7 @@ footer {
     }
 }
 
-.text-content h2 {
+.banner__text h2 {
     font-size: 3.2rem;
 }
 
@@ -1997,7 +1996,7 @@ footer {
 /*    white-space: nowrap;*/
 /*}*/
 
-.text-content li a {
+.banner__text li a {
     color: #ff4d30;
     font-size: 3.2rem;
     gap: 1rem;
