--- a/src/App.css
+++ b/src/App.css
@@ -2201,7 +2201,7 @@ footer {
     color: #777777;
 }
 
-.contact-div {
+.contact__information {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 3rem;
@@ -2215,13 +2215,13 @@ footer {
 }
 
 @media (max-width: 950px) {
-    .contact-div {
+    .contact__information {
         grid-template-columns: 1fr;
         text-align: center;
     }
 }
 
-.contact-div__text {
+.contact__text {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -2229,19 +2229,19 @@ footer {
 }
 
 @media (max-width: 950px) {
-    .contact-div__text {
+    .contact__text {
         margin: 0 auto;
         /*margin-bottom: 2rem;*/
     }
 }
 
-.contact-div__text h2 {
+.contact__text h2 {
     font-size: 4.2rem;
     line-height: 1.3;
     margin-bottom: 2rem;
 }
 
-.contact-div__text p {
+.contact__text p {
     font-size: 1.6rem;
     font-family: "Rubik", sans-serif;
     color: #706f7b;
@@ -2249,7 +2249,7 @@ footer {
     margin-bottom: 2rem;
 }
 
-.contact-div__text a {
+.contact__text a {
     text-decoration: none;
     color: #010103;
     font-size: 1.6rem;
@@ -2258,31 +2258,31 @@ footer {
     margin-bottom: 0.5rem;
 }
 
-.contact-div__text a:hover {
+.contact__text a:hover {
     color: #ff4d30;
 }
 
-.contact-div__form {
+.contact__form {
     display: flex;
     flex-direction: column;
 }
 
-.contact-div__form form {
+.contact__form form {
     display: flex;
     flex-direction: column;
 }
 
-.contact-div__form form label {
+.contact__form form label {
     font-size: 1.6rem;
     font-weight: 600;
     margin-bottom: 1rem;
 }
 
-.contact-div__form form label b {
+.contact__form form label b {
     color: #ff4d30;
 }
 
-.contact-div__form form input {
+.contact__form form input {
     background-color: #f2f2f2;
     padding: 19px 30px 19px 30px;
     font-size: 1.6rem;
@@ -2291,7 +2291,7 @@ footer {
     margin-bottom: 2.3rem;
 }
 
-.contact-div__form form textarea {
+.contact__form form textarea {
     background-color: #f2f2f2;
     height: 18rem;
     padding: 19px 30px 19px 30px;
@@ -2301,7 +2301,7 @@ footer {
     margin-bottom: 2.5rem;
 }
 
-.contact-div__form form button {
+.contact__form form button {
     background-color: #ff4d30;
     padding: 1.8rem 3rem;
     border-radius: 0.3rem;
@@ -2314,7 +2314,7 @@ footer {
     cursor: pointer;
 }
 
-.contact-div__form form button:hover {
+.contact__form form button:hover {
     box-shadow: 0 10px 15px 0 rgba(255, 83, 48, 0.6);
     background-color: #fa4226;
 }
