--- a/src/App.css
+++ b/src/App.css
@@ -1556,7 +1556,7 @@ li {
     box-shadow: 0 10px 15px 0 rgba(255, 83, 48, 0.35);
 }
 
-.download-section {
+.download__section {
     background-image: url("/src/images/banners/bg02.png");
     background-color: #f8f8f8;
     background-position: top center;
@@ -1568,12 +1568,12 @@ li {
 }
 
 @media (max-width: 700px) {
-    .download-section {
+    .download__section {
         background-image: none;
     }
 }
 
-.download-text {
+.download__text {
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -1582,50 +1582,49 @@ li {
 }
 
 @media (max-width: 700px) {
-    .download-text {
+    .download__text {
         text-align: center;
         margin: 0 auto;
     }
 }
 
-.download-text h2 {
+.download__text h2 {
     font-size: 4.2rem;
     color: #010103;
 }
 
-.download-text p {
+.download__text p {
     font-size: 1.6rem;
     color: #706f7b;
     font-family: "Rubik", sans-serif;
     line-height: 1.5;
 }
 
-.download-text__btns {
+.download__btn {
     display: flex;
     gap: 3rem;
     margin-top: 2rem;
 }
 
 @media (max-width: 700px) {
-    .download-text__btns {
+    .download__btn {
         justify-content: center;
     }
 }
 
 @media (max-width: 550px) {
-    .download-text__btns {
+    .download__btn {
         flex-direction: column;
         align-items: center;
     }
 }
 
-.download-text__btns img {
-    width: 40%;
+.download__btn a img {
     cursor: pointer;
 }
 
 @media (max-width: 550px) {
-    .download-text__btns img {
+    .download__btn  a img {
         width: 22rem;
     }
 }
