add max-width: 400px for booking-modal__title h2

--- a/src/App.css
+++ b/src/App.css
@@ -640,6 +640,13 @@ li {
     text-transform: uppercase;
 }
 
+
+@media (max-width: 400px) {
+    .booking-modal__title h2{
+        width: 200px;
+    }
+}
+
 .booking-modal__button {
     font-size: 2.5rem;
     cursor: pointer;
