--- a/src/App.css
+++ b/src/App.css
@@ -1694,7 +1694,7 @@ li {
 
 footer {
     background-color: #ffffff;
-    padding: 10rem 0;
+    padding: 6rem 0;
 }
 
 .footer__content {
@@ -2574,6 +2574,12 @@ footer {
 
 .formControl {
     width: 400px;
+}
+
+@media (max-width: 470px) {
+    .formControl {
+        width: auto;
+    }
 }
 
 .qqqq {
