--- a/src/App.css
+++ b/src/App.css
@@ -2103,14 +2103,14 @@ footer {
     border: 1px solid #d5d5d5;
     border-radius: 0.3rem;
     display: flex;
-    width: 35rem;
+    width: 32rem;
     flex-direction: column;
 }
 
 @media (max-width: 400px) {
     .models__box {
         grid-template-columns: 1fr;
-        width: 100%;
+        /*width: 100%;*/
     }
 }
 
@@ -2121,8 +2121,8 @@ footer {
 }
 
 .models__img img {
-    width: 90%;
-    height: 22rem;
+    width: 95%;
+    height: 21rem;
 }
 
 .models__description {
@@ -2146,7 +2146,7 @@ footer {
 }
 
 .models__name p {
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-weight: 700;
 }
 
